--- a/css/styles.css
+++ b/css/styles.css
@@ -315,13 +315,14 @@ section ul li {
     padding: 0.4rem 0.8rem;
     border-radius: 20px;
     font-size: 0.9rem;
-    box-shadow: 0 1px 4px rgba(0,0,0,0.1);
+    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
 }
 
 /* 2) Igualar altura de imágenes en proyectos */
 .proyecto .img-container {
     width: 100%;
-    height: 200px; /* altura uniforme */
+    height: 200px;
+    /* altura uniforme */
     overflow: hidden;
     display: flex;
     align-items: center;
@@ -348,6 +349,8 @@ section ul li {
     gap: 2rem;
 }
 
+
+
 /*Modo oscuro*/
 
 #toggle-dark-mode {
@@ -362,7 +365,7 @@ section ul li {
     border-radius: 20px;
     cursor: pointer;
     font-size: 0.9rem;
-    box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
     transition: background-color 0.3s;
 }
 
@@ -416,7 +419,7 @@ body.dark-mode #particles-js {
 }
 
 
-body.dark-mode section{
+body.dark-mode section {
     padding: 20px 20px 20px 20px;
 }
 
@@ -440,7 +443,7 @@ body.dark-mode section{
         font-size: 3.5rem;
     }
 
-    .categoriaProyecto{
+    .categoriaProyecto {
         margin-bottom: 30px;
     }
 
@@ -564,7 +567,9 @@ body.dark-mode section{
         margin-top: 1rem;
     }
 
-    footer, #redes, #contacto {
+    footer,
+    #redes,
+    #contacto {
         font-size: 1rem;
     }
 
